change pkg install state from latest to present
also remove for update cache. We now have unattended_upgrades on so the
cache will always be uptodate and the latest version of pkg will always
be installed.

--- a/roles/calibre-server/tasks/main.yml
+++ b/roles/calibre-server/tasks/main.yml
@@ -4,8 +4,7 @@
   apt:
     pkg:
       - calibre
-    state: latest
-    update_cache: true
+    state: present
 
 - name: "Create calibre group"
   group:
