--- a/main.yml
+++ b/main.yml
@@ -7,14 +7,20 @@
       apt:
         pkg:
           - screen
+          - lshw
+          - alpine
           - neofetch
           - inxi
-        state: latest
-        update_cache: true
+        state: present
   
   roles:
+    - unattended_upgrades
     - install_vim
 
 - hosts: calibre
   roles:
     - calibre-server
+
+- hosts: scanner
+  roles:
+    - remote_scanner
