add i2c-tools to list of packages to install

--- a/main.yml
+++ b/main.yml
@@ -6,6 +6,7 @@
     - name: install packages
       apt:
         pkg:
+          - i2c-tools
           - screen
           - lshw
           - alpine
