--- a/raspberrypis.yml
+++ b/raspberrypis.yml
@@ -40,7 +40,7 @@ all:
     farbreton:
       description: Secondary PiHole
       memory: 4GB
-      MAC:
+      MAC: d8:3a:dd:18:18:1a
 
 pihole:
   hosts:
